--- a/index.html
+++ b/index.html
@@ -44,6 +44,10 @@ layout: default
   >
     Native app for your CI
   </div>
+  <img
+    src="{{site.baseurl}}/assets/notification.jpg"
+    class="h-30 w-96 rounded"
+  />
   <div class="text-coolGray-500 dark:text-coolGray-300 mt-4">
     It takes a web app many seconds to load a simple status badge, with CI Demon
     it's always visible in your menu bar, not only that but receive
@@ -111,5 +115,106 @@ layout: default
   <div class="text-coolGray-500 dark:text-coolGray-300 mt-4">
     But you don't have to believe me, here are some testimonials from devs
     already using it.
+  </div>
+
+  <div class="flex flex-wrap justify-center">
+    <div
+      class="
+        p-3
+        bg-gradient-to-r
+        from-purple-700
+        to-blue-600
+        rounded
+        shadow-lg
+        my-4
+      "
+    >
+      <h3 class="font-semibold text-xl text-white">
+        Must have for developers - srolija
+      </h3>
+      <div class="text-white text-lg italic">
+        One of those tools that you don't realize how convenient it makes life
+        until you try it. Works great with CircleCI and saves time having to
+        wait and check the build status manually.
+      </div>
+    </div>
+    <div
+      class="
+        p-3
+        bg-gradient-to-r
+        from-purple-700
+        to-blue-600
+        rounded
+        shadow-lg
+        my-4
+      "
+    >
+      <h3 class="font-semibold text-xl text-white">
+        A simple tool that adds so much DX value - twgraham
+      </h3>
+      <div class="text-white">
+        "Having a unobtrusive reminder of CI status is extremely useful. While
+        email or slack notifications might be great for important build
+        notifications, I find this is so much better for getting updates on
+        feature branches that don't need my immediate attention. It's also so
+        much faster than going to a bookmarked CI page in your browser, finding
+        the build, and waiting for slow interfaces to load."
+      </div>
+    </div>
+    <div
+      class="
+        p-3
+        bg-gradient-to-r
+        from-purple-700
+        to-blue-600
+        rounded
+        shadow-lg
+        my-4
+      "
+    >
+      <h3 class="font-semibold text-xl text-white">
+        Great tool for monitoring CI workflows - Nigel1066
+      </h3>
+      <div class="text-white">
+        "I've been using CCMenu for a while but that has issues as it only
+        monitors the default branch in CircelCI. I wanted the ability to monitor
+        specific branches and also any personal branches. CI Demon totally does
+        that!"
+      </div>
+    </div>
+  </div>
+
+  <div
+    class="
+      text-coolGray-900
+      dark:text-white
+      text-xl
+      md:text-3xl
+      font-semibold
+      mt-20
+    "
+  >
+    My words to you
+  </div>
+  <img
+    src="{{site.baseurl}}/assets/profile.jpeg"
+    class="h-36 w-36 rounded-full my-4"
+  />
+
+  <p class="text-gray-500 dark:text-white mb-4">
+    I'm Oscar!, I created CI Demon to coordinate work with my team. With large
+    amounts of code committed every day, it is particularly important to have an
+    overview of the project.
+  </p>
+  <p class="text-gray-500 dark:text-white mb-4">
+    Hopefully it will save you time and headaches when something goes unnoticed.
+  </p>
+  <div class="flex my-24">
+    <p class="text-gray-500">
+      If you have any question or problem, please,
+      <a href="mailto:ospfranco@protonmail.com" class="text-blue-500"
+        >contact me.</a
+      >
+    </p>
   </div>
 </div>
